Opened 15 years ago
Closed 15 years ago
#4148 closed bug (fixed)
Font setting is not saved correctly after system restart
Reported by: | peyren | Owned by: | darkwyrm |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Change of 'Plain font' and 'Bold font' setting at Preference->Fonts is not saved.
How to reproduce:
- go to Preference->Fonts
- change 'Plain font' from 'DejaVu Sans Book' to 'DejaVu Sans Condensed'
- restart the system
- check Fonts setting again. 'Plain font' will still be 'DejaVu Sans Book'.
Same procedure can be applied for 'Bold font' setting. However, 'Fixed font' and 'Menu font' settings are saved correctly.
Tested in Virtual box and qemu with hrev31835-gcc4 (and some former versions).
Change History (1)
comment:1 by , 15 years ago
Component: | Preferences/Appearance → Servers/app_server |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev31904.